<resources>
    <string name="app_name">Pocket Grocer</string>
    <string name="item_add">Search by Item</string>
    <string name="barcode_add">Search by Barcode</string>
    <string name="store_name">Items in Our Store:</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_barcode">Scan Barcode</string>
    <string name="title_activity_text">Scan Image for Text</string>
    <string name="title_activity_image">Scan Image for Object</string>
    <string name="profile_title">Your Profile</string>
    <string name="back_button">Back</string>
    <string name="view_profile">View Profile</string>
    <string name="checkout_cart">Checkout</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="age">Age</string>
    <string name="ccinfo">Current Credit Card</string>
    <string name="address">Address</string>
    <string name="scan">Scan This Barcode</string>
    <string name="additem">Add Item</string>
    <string name="enter_qyt">Enter Qty</string>
    <string name="scan_barcode">Scan Barcode to View Product Information</string>
    <string name="text_add">Search by Text</string>
    <string name="button_scan_image">Scan Image</string>
    <string name="upload_barcode">Upload New Barcode</string>
    <string name="upload_image">Upload New Image</string>
    <string name="wait">Waiting for upload...</string>
    <string name="scan_image">Scan Image to View Product Information</string>
    <string name="wait_label_image_scan">Ready to Scan!</string>
    <string name="image_scan_product_text">Found item: %1$s\nPrice: %2$s\nIn Stock: %3$d</string>
    <string name="image_scan_toast_text">Sorry we do not sell that type of item!</string>
    <string name="text_scan_upload_image">Please upload an image to search</string>
    <string name="text_scan_toast_text">Sorry we do not sell that type of item!</string>
</resources>