<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonImage"
        android:layout_width="409dp"
        android:layout_height="52dp"
        android:layout_marginStart="2dp"
        android:onClick="onButtonClick"
        android:text="@string/text_add"
        app:layout_constraintBottom_toTopOf="@+id/buttonItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBarcode"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:onClick="onButtonClick"
        android:text="@string/barcode_add"
        app:layout_constraintBottom_toTopOf="@+id/buttonImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonItem"
        android:layout_width="409dp"
        android:layout_height="52dp"
        android:onClick="onButtonClick"
        android:text="@string/item_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewRecycle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="387dp"
        android:layout_height="466dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="233dp"
        android:layout_height="46dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/store_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecycle" />

</androidx.constraintlayout.widget.ConstraintLayout>