<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageScanner">

    <TextView
        android:id="@+id/textIWait2"
        android:layout_width="409dp"
        android:layout_height="35dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:text="@string/wait"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLoad2" />

    <ImageView
        android:id="@+id/imgLoad2"
        android:layout_width="57dp"
        android:layout_height="55dp"
        android:layout_marginStart="178dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="176dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTextScanner"
        tools:srcCompat="@drawable/tile000" />

    <TextView
        android:id="@+id/textItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/scan_barcode"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScanImage" />

    <ImageView
        android:id="@+id/imageViewTextScanner"
        android:layout_width="240dp"
        android:layout_height="239dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/btnScanImage"
        android:layout_width="428dp"
        android:layout_height="85dp"
        android:layout_marginStart="16dp"
        android:enabled="false"
        android:onClick="onButtonClick"
        android:text="@string/button_scan_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIWait2" />

    <TextView
        android:id="@+id/txtViewScannedItemFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="179dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="101dp"
        android:text="@string/upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>